# verdict

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
audit_logs/: audit_log_20260120_134307.csv  audit_log_20260120_134307.json  audit_log_20260120_142955.csv  audit_log_20260120_142955.json
config/: settings.py
data/: demo_business_dataset.csv  generate_demo.py  verdict_demo.csv
src/: README.md  __init__.py  data_handler.py  explainability.py  exporter.py  models.py  preprocessing.py  visualizations.py  whatif.py
src/api/: __init__.py  app.py  schemas.py
src/artifacts/: __init__.py  model_card_generator.py  model_serializer.py  report_gen.py
src/core/: __init__.py  cross_validation.py  data_handler.py  metrics.py  models.py  pipeline.py  preprocessing.py
src/decision/: __init__.py  confidence_estimator.py  cost_analyzer.py  data_quality_analyzer.py  decision_audit_logger.py  decision_mapper.py  multiclass_handler.py  threshold_analyzer.py
src/explain/: __init__.py  counterfactual_explainer.py  whatif.py
src/ui/: __init__.py  charts.py  dashboard.py  session_manager.py  utils.py  (+1 more)
tests/: quick.py  test_api_endpoints.py  test_api_v2.py  test_binary_regression.py  test_core.py  test_cv_integration.py  test_dashboard.py  test_data_handler_edge_cases.py  test_integration.py  test_model_serializer.py  test_multiclass_handler_enhanced.py  test_multiclass_integration_v2.py  test_multiclass_metrics.py  test_ovr_multiclass.py  test_phase5.py  test_platform.py
(+7 files in other folders)
